--- a/ja/01_introduction.ipynb
+++ b/ja/01_introduction.ipynb
@@ -2,81 +2,101 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "file_extension": ".py",
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyN2Z++QOWMfOZAOmfhdJFCu",
+      "include_colab_link": true
+    },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
     },
-    "mimetype": "text/x-python",
-    "name": "python",
-    "npconvert_exporter": "python",
-    "pygments_lexer": "ipython3",
-    "version": 3,
-    "colab": {
-      "name": "01_introduction.ipynb",
-      "provenance": []
+    "language_info": {
+      "name": "python"
     }
   },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3HV3Smnxntau"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "# はじめに\n",
-        "\n",
-        "このチュートリアルでは**グラフの集合**に対するさまざまな計算を高速に実行するためのPythonライブラリである[Graphillion](https://github.com/takemaru/graphillion)を紹介します．Graphillionを用いることでグラフに対する以下のような計算を，数行のコードで簡単に実行できます．\n",
-        "\n",
-        "- グラフ中の2つの頂点を結ぶ経路のうち，特定の頂点を経由するものの個数を調べる\n",
-        "- すべての頂点をたどる巡回路のうち，辺の重みの和が最長のものを求める．\n",
-        "- 通信ネットワークが故障せずに動作する確率を計算する．\n",
-        "\n",
-        "これらの計算はすべて**NP困難**とよばれる，計算が難しい問題の一種であることが知られています．NP困難な問題を解くために必要な計算時間は問題サイズ対して指数的に増加します．そのため，問題サイズが大きくなると，現代の計算機では計算に年単位の時間がかかってしまうことも容易に起こりえます．Graphillionはこうした難しい計算を現実的な時間で解く機能を提供します．\n",
-        "\n",
-        "Graphillionの内部では**ゼロサプレス型二分決定グラフ (ZDD)** とよばれるデータ構造と，ZDDを用いた最先端のアルゴリズム技術が用いられています．このチュートリアルではGraphillionのなかでZDDがどのように扱われているかについても簡単に解説します．なお，GraphillionはZDDの存在を完全に隠蔽しているので，ユーザはZDDに関する知識がなくてもグラフの集合を直観的に扱うことができます．\n",
-        "\n",
-        "\n",
-        "## このチュートリアルで学べること\n",
-        "\n",
-        "このチュートリアルを通じて以下を取得してもらうことを目標としています．\n",
-        "\n",
-        "- Graphillionの基本的な利用方法．\n",
-        "- Graphillionが特に効果を発揮するユースケース．\n",
-        "- Grapillionの動作原理．特にZDDが果たす役割について．\n",
-        "\n",
-        "## Graphillionの位置づけ\n",
-        "\n",
-        "グラフを扱うためのライブラリは多数存在します．たとえば [NetworkX](https://networkx.github.io/) はグラフをを扱うな代表的なPythonライブラリであり，グラフを対象とした様々なアルゴリズムの実行や可視化などの豊富な機能を有しています．\n",
-        "\n",
-        "Graphillionはグラフの集合の処理に特化した機能を提供するライブラリであり，NetworkXのような多様な機能は有していません．一方でグラフ集合の処理に関しては他のソフトウェアでは実現できない多数の機能を有しています．グラフ集合を扱うことで実現できることについては以降のチュートリアルで紹介します．\n",
-        "\n",
-        "なお，GraphillionはNetworkXと連携して利用することも可能です．たとえばGraphillionの実行結果をNetworkXに渡して，NetworkXの各種機能を利用することができます．\n",
-        "\n",
-        "## Google Colaboratoryの利用\n",
-        "本チュートリアルで用いるプログラムはすべて[Google Colaboratory](https://colab.research.google.com/notebooks/intro.ipynb) （Colab）上で動かすことができます．Calabを用いることでPythonの実行環境を用意することなくGraphillionの機能を試すことができます．\n",
-        "\n",
-        "Colabを利用するためにはGoogleアカウントが必要となります．Colabはほとんどの主要なブラウザで動作します．最新バージョンのChrome, Firefox, Safariでは完全に動作することが検証されています．\n",
-        "\n",
-        "\n",
-        "\n",
-        "## アウトライン\n",
-        "1. はじめに\n",
-        "\n",
-        "2. [グラフ入門](02_graph_theory.ipynb):  本チュートリアルを理解するために必要となるグラフ理論の基礎について説明します．グラフとは何か，なぜグラフ理論が有益なのかを簡単に説明します．既にグラフ理論に習熟されている方は読み飛ばしていただいて構いません．\n",
-        "\n",
-        "3. [グラフと組合せ爆発](03_graph_and_combinatorial_explosion.ipynb): グラフの問題を解く際，しばしば指数的に存在する部分グラフを扱わなければならない場面がでてきます．この章ではそのような組合せ爆発について解説します．\n",
-        "\n",
-        "4. [Graphillionに触れてみよう](04_graphillion_first_step.ipynb): いよいよGraphillionの説明に入ります．ま←あ有名な「数え上げお姉さん問題」を題材に，Graphillionを用いたグラフ集合処理の例を紹介します．\n",
-        "\n",
-        "5. [Graphillionの内部](05_graphillion_and_zdd.ipynb): Graphillionの内部ではZDDとよばれるデータ構造が利用されています．GraphillionはZDDを意識せずとも利用することができますが，Graphillionの挙動を理解するためにはZDDの理解が不可欠です．この章ではGraphillionにおいてZDDが果たす役割について説明します．\n",
-        "\n",
-        "6. [GraphSet](06_graph_set.ipynb): Graphillionではグラフの集合を表すGraphSetとよばれるオブジェクトを作成し，様々な操作を実行することができます．この章ではGraphSetに対して行える代表的な操作を紹介します．\n",
-        "\n",
-        "7. [Graphillionによる最適化](07_answering_path_query.ipynb): Graphillionを用いることで，グラフに関する最適化問題を解くことができます．この章ではGraphillionを用いて最適化問題を解く方法と，Graphillionが得意とする最適化問題の種類について説明します．\n",
-        "8. [ネットワーク信頼性の計算](08_network_reliability.ipynb): Graphillionの機能を活用することで，ネットワークの故障に対する強さを調べることができます．\n",
-        "9. [Graphillion 実践ガイド](09_practical_guide.ipynb) Graphillionで効率的に問題を解くための指針をいくつか紹介します．"
+        "<a href=\"https://colab.research.google.com/github/yurahuna/graphillion_tutorial/blob/master/ja/01_introduction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Introduction\n",
+        "\n",
+        "([Japanese version](https://github.com/nsnmsak/graphillion_tutorial) is available.)\n",
+        "\n",
+        "This tutorial introduces [Graphillion](https://github.com/takemaru/graphillion), a Python library for fast execution of various computations on a **set of graphs**. Graphillion allows you to easily perform the following computations on a graph in a few lines of code.\n",
+        "\n",
+        "- Find the number of paths connecting two vertices in a graph that pass through a particular vertex.\n",
+        "- Find the longest path with the longest sum of edge weights among the paths traversing all vertices.\n",
+        "- Compute the probability that the communication network will operate without failure.\n",
+        "\n",
+        "All of these calculations are known to be **NP-hard**, a class of computationally difficult problems, and the computation time required to solve an NP-hard problem increases exponentially with the problem size. Graphillion provides the ability to solve these difficult problems in realistic time.\n",
+        "\n",
+        "Graphillion uses a data structure called a **zero-supress binary decision diagram (ZDD)** and state-of-the-art algorithmic techniques based on ZDDs. This tutorial also briefly describes how ZDDs are handled in Graphillion. Graphillion completely hides the existence of ZDDs, allowing users to work intuitively with a set of graphs without any knowledge of ZDDs.\n",
+        "\n",
+        "\n",
+        "## What you will learn in this tutorial\n",
+        "\n",
+        "The goal of this tutorial is to provide you with the following.\n",
+        "\n",
+        "- Basic usage of Graphillion.\n",
+        "- Use cases where Graphillion is particularly effective.\n",
+        "- How Grapillion works. In particular, the role of ZDDs.\n",
+        "\n",
+        "## Positioning of Graphillion\n",
+        "\n",
+        "There are many libraries for working with graphs. For example, [NetworkX](https://networkx.github.io/) is a typical Python library that handles graphs and has rich functionality for executing and visualizing various algorithms on graphs.\n",
+        "\n",
+        "Graphillion is a library that specializes in processing sets of graphs and does not have the variety of features that NetworkX has. On the other hand, Graphillion has many features for graph set processing that are not available in other software. The following tutorials will show what can be achieved by handling graph sets.\n",
+        "\n",
+        "Graphillion can also be used in conjunction with NetworkX. For example, Graphillion can be used in conjunction with NetworkX by passing its execution results to NetworkX.\n",
+        "\n",
+        "## Using Google Colaboratory\n",
+        "All programs used in this tutorial can be run on [Google Colaboratory](https://colab.research.google.com/notebooks/intro.ipynb) (Colab). By using Colab, you can try out the functionality of Graphillion without having to prepare a Python runtime environment.\n",
+        "\n",
+        "A Google account is required to use Colab, which works with most major browsers. It has been tested to work perfectly with the latest versions of Chrome, Firefox, and Safari.\n",
+        "\n",
+        "\n",
+        "## Outlines\n",
+        "1. introduction\n",
+        "\n",
+        "2. [Introduction to Graph Theory](02_graph_theory.ipynb): This section explains the basics of graph theory necessary to understand this tutorial. A brief explanation of what graphs are and why graph theory is useful. Those who are already familiar with graph theory may skip this section.\n",
+        "\n",
+        "3. [Graphs and combinatorial explosion](03_graph_and_combinatorial_explosion.ipynb): When solving graph problems, one often has to deal with subgraphs that exist exponentially. This chapter describes such combinatorial explosions.\n",
+        "\n",
+        "4. [Let's touch Graphillion](04_graphillion_first_step.ipynb): This is the time to explain Graphillion. We will introduce an example of graph set processing using Graphillion based on the famous \"Counting Sisters Problem\".\n",
+        "\n",
+        "5. [Inside Graphillion](05_graphillion_and_zdd.ipynb): Graphillion uses a data structure called ZDD. Although Graphillion can be used without being aware of ZDDs, understanding ZDDs is essential for understanding Graphillion's behavior. This chapter describes the role of ZDDs in Graphillion.\n",
+        "\n",
+        "6. [GraphSet](06_graph_set.ipynb): Graphillion allows users to create an object called a GraphSet that represents a set of graphs and performs various operations. This chapter introduces typical operations on GraphSets. 7.\n",
+        "\n",
+        "7. [Optimization with Graphillion](07_answering_path_query.ipynb): Graphillion can be used to solve optimization problems related to graphs. This chapter describes how to solve optimization problems using Graphillion and the types of optimization problems in which Graphillion excels. 8.\n",
+        "\n",
+        "8. [Calculating Network Reliability](08_network_reliability.ipynb): By utilizing Graphillion's functionality, you can examine the network's resilience to failures.\n",
+        "\n",
+        "9. [Graphillion Practical Guide](09_practical_guide.ipynb): Some guidelines for solving problems efficiently with Graphillion."
+      ],
+      "metadata": {
+        "id": "Tqw1x1_UYeR6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uDAOwJeMcubM"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
