--- a/ja/02_graph_theory.ipynb
+++ b/ja/02_graph_theory.ipynb
@@ -1,101 +1,101 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# グラフ理論\n",
-    "\n",
-    "この章ではグラフ理論の基礎について説明します．グラフ理論に習熟している方は[次章](03_graph_and_combinatorial_explosion.ipynb)に進んでください．\n",
-    "\n",
-    "\n",
-    "\n",
-    "## グラフとは\n",
-    "\n",
-    "**頂点**の集合と，2つの頂点間を結ぶ**辺**の集まりから構成される構造のことを**グラフ**とよびます．以下の図は6つの頂点からなるグラフの例です．数字が書かれている円が頂点，２つの頂点を結ぶ線が辺になります．\n",
-    "\n",
-    "\n",
-    "<img src=\"img/02/example.png\" alt=\"グラフの例\" style=\"height: 150px;\"/>\n",
-    "\n",
-    "グラフを用いることによって様々なものの関連性を表現することができます．\n",
-    "たとえば，鉄道の路線図は駅を頂点とし，隣接する駅に対応する頂点間を辺でつないだグラフとして表現されます．また，World Wide WebにおけるWebページのハイパーリンクも，Webページを頂点，リンクを辺としたグラフとして表現することができます．他にも以下のようなものがグラフとして表現されます．\n",
-    "\n",
-    "- ソーシャルネットワーク\n",
-    "- 情報通信ネットワーク\n",
-    "- 分子構造\n",
-    "\n",
-    "辺に向きあるグラフを**有向グラフ**，向きのないグラフを**無向グラフ**とよびます．Webページのハイパーリンクはリンクするページとリンクされるページとの関係が非対称なので，有向グラフとして表現するのが適しています．一方で路線図は無向グラフとして表現するのが適しているといえます．\n",
-    "本チュートリアルでは無向グラフを扱います．\n",
-    "\n",
-    "また，グラフの各辺に数値が付与されているグラフを，**重み付きグラフ**とよびます．重み付きグラフの例です．\n",
-    "<img src=\"img/02/weighted_graph_example.png\" alt=\"重みつきグラフの例\" style=\"height: 150px;\"/>\n",
-    "\n",
-    "\n",
-    "\n",
-    "## 部分グラフ\n",
-    "あるグラフから辺と頂点をいくつか選択することで作られるグラフを**部分グラフ**とよびます．グラフから辺をいくつか選択し，その辺の端点となっている頂点を選択することで作られる部分グラフを**辺誘導部分グラフ**とよびます．下の図は部分グラフの例です．部分グラフは赤色の辺と頂点とで表現されています．左側は辺誘導部分グラフですが，右側はそうではありません．\n",
-    "\n",
-    "<img src=\"img/02/induced_subgraph.png\" alt=\"部分グラフの例\" style=\"height: 120px;\"/>\n",
-    "\n",
-    "以下，本チュートリアルで部分グラフとよぶときには，辺を選択することで得られる誘導部分グラフのことを指します．\n",
-    "\n",
-    "部分グラフにはいくつか特徴的なものがあります．部分グラフに含まれる全ての辺を一度ずつ順にたどることで，ある頂点から別の頂点にたどり着けるとき，その部分グラフを**パス**または**経路**とよびます．経路中には同じ頂点は二度含まれないとします．\n",
-    "\n",
-    "ある頂点から同じ頂点までの経路のことを**閉路**もしくは**ループ**とよびます．部分グラフ中である2つの頂点を結ぶ経路が存在するとき，その2点は連結であるといいます．部分グラフに含まれる全ての頂点のペアが連結かつ，閉路を含まないような部分グラフを**木**とよびます．\n",
-    "\n",
-    "パス，ループ，木の例です．\n",
-    "\n",
-    "<img src=\"img/02/path_tree_cycle.png\" alt=\"パス，木，ループの例\" style=\"height: 120px;\"/>\n",
-    "\n",
-    "## なぜグラフとして表現するのか\n",
-    "\n",
-    "グラフとして表現することは一種の抽象化です．例えば鉄道の路線図は実際の駅の間の位置関係などを抽象化して，駅間の接続関係のみを表しています．\n",
-    "\n",
-    "抽象化によって情報は欠落しますが，一方でグラフとして表現することで，グラフを対象とした様々な効率的なアルゴリズムを用いて，問題を解決できるようになります．\n",
-    "\n",
-    "与えられた２つの頂点を結ぶ，もっとも辺の重みの和が小さい経路を探す問題を**最短経路探索問題**とよびます．最短経路問題はグラフに関するもっとも有名な問題の一つであり，効率的に最短経路を求めるアルゴリズムが知られています．\n",
-    "\n",
-    "重み付きグラフ中で頂点1, 4を結ぶ最短経路は以下の図のようになります．\n",
-    "\n",
-    "<img src=\"img/02/shortest_path_example.png\" alt=\"最短経路の例\" style=\"height: 150px;\"/>\n",
-    "\n",
-    "現実の様々な問題を最短経路問題を解くことで解決することができます．例えば道路網を表現したグラフを用意し，その各辺に道路を通過する際にかかる所要時間を重みとして付与したとします．すると，このグラフ上で2つの頂点間の最短経路を求めることで，所要時間最短の移動経路を求めることができます．\n",
-    "\n",
-    "最短経路探索問題の他にも，ネットワークフロー問題や最小カット問題，全域木問題など，グラフに対する様々な問題と，それらの問題を効率的に解くためのアルゴリズムが知られています．このように，対象をグラフとして抽象化して表現することによって，グラフを扱うさまざまな数学的理論やアルゴリズムの恩恵を享受する事が可能となります．\n",
-    "\n",
-    "## まとめ\n",
-    "\n",
-    "この章では以降の説明で必要となるグラフ理論の基本について説明しました．様々な現実の対象をグラフとして表現することができ，グラフとして表現することで，グラフを処理するための強力なアルゴリズムを活用することができます．\n",
-    "\n",
-    "グラフは強力な道具である一方，グラフとして表現しても難しい問題も存在します．[次章](03_graph_and_combinatorial_explosion.ipynb)ではそのような問題を紹介します．"
-   ]
-  }
- ],
- "metadata": {
-  "file_extension": ".py",
-  "kernelspec": {
-   "display_name": "'Python Interactive'",
-   "language": "python",
-   "name": "bba034e0-72a7-4fbb-aae5-be83db0c25ce"
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyN6tjbkOkF/POQB6l3zgkmD",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
-  },
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/yurahuna/graphillion_tutorial/blob/master/ja/02_graph_theory.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Graph Theory\n",
+        "\n",
+        "This chapter explains the basics of graph theory. If you are familiar with graph theory, please go to [next chapter](03_graph_and_combinatorial_explosion.ipynb).\n",
+        "\n",
+        "\n",
+        "## What is a graph?\n",
+        "\n",
+        "**A graph** is a structure consisting of a set of **vertices** and a set of **edges** connecting two vertices. The following figure shows an example of a graph with six vertices. A numbered circle is a vertex and a line connecting two vertices is an edge.\n",
+        "\n",
+        "\n",
+        "<img src=\"img/02/example.png\" alt=\"Graph example\" style=\"height: 150px;\"/>\n",
+        "\n",
+        "Graphs can be used to show the relationship between various objects.\n",
+        "For example, a railroad map is represented as a graph with stations as vertices and edges connecting vertices corresponding to adjacent stations. Hyperlinks to web pages on the World Wide Web can also be represented as a graph with web pages as vertices and links as edges. The following items can also be represented as graphs.\n",
+        "\n",
+        "- Social networks\n",
+        "- Information and communication networks\n",
+        "- Molecular structures\n",
+        "\n",
+        "A graph with oriented edges is called a **directed graph** and a graph with non-oriented edges is called an **undirected graph**. A hyperlink on a web page can be represented as a directed graph because the relationship between the linking page and the linked page is asymmetric. On the other hand, a route map is best represented as an undirected graph.\n",
+        "This tutorial deals with undirected graphs.\n",
+        "\n",
+        "A graph with numerical values on each edge is called a **weighted graph**. Here is an example of a weighted graph.\n",
+        "<img src=\"img/02/weighted_graph_example.png\" alt=\"Weighted graph example\" style=\"height: 150px;\"/>\n",
+        "\n",
+        "\n",
+        "\n",
+        "## Subgraphs\n",
+        "A graph is called a **subgraph** if it is constructed by selecting some edges and vertices from the graph. A subgraph constructed by selecting some edges and vertices that are endpoints of the edges is called an **edge-induced subgraph**. The figure below shows an example of a subgraph. The subgraph is represented by red edges and vertices. The left-hand side is an edge-induced subgraph, while the right-hand side is not.\n",
+        "\n",
+        "<img src=\"img/02/induced_subgraph.png\" alt=\"Example of a subgraph\" style=\"height: 120px;\"/>\n",
+        "\n",
+        "Hereafter in this tutorial, when we refer to a subgraph, we mean an induced subgraph obtained by selecting an edge.\n",
+        "\n",
+        "A subgraph has several characteristics. A subgraph is called a **path** if every edge in the subgraph can be traversed once in sequence from one vertex to another. A path is assumed to contain no two identical vertices.\n",
+        "\n",
+        "A path from one vertex to the same vertex is called a **cycle**. Two vertices in a subgraph are said to be **connected** if there exists a path connecting them. A subgraph is called a **tree** if every pair of vertices in the subgraph is connected and does not contain a cycle.\n",
+        "\n",
+        "Here are some examples of paths, cycles, and trees.\n",
+        "\n",
+        "<img src=\"img/02/path_tree_cycle.png\" alt=\"Path, tree, loop example\" style=\"height: 120px;\"/>\n",
+        "\n",
+        "## Why represent as a graph?\n",
+        "\n",
+        "Representing something as a graph is a kind of abstraction. For example, a railroad map abstracts the actual locations of stations and shows only the connections between stations.\n",
+        "\n",
+        "While the abstraction lacks information, representing it as a graph allows us to solve problems using a variety of efficient algorithms on graphs.\n",
+        "\n",
+        "The problem of finding the path with the smallest sum of edge weights connecting two given vertices is called the **shortest path problem**. The shortest path problem is one of the most famous graph problems, and efficient algorithms are known to find the shortest path.\n",
+        "\n",
+        "The shortest path connecting vertices 1 and 4 in a weighted graph is shown in the figure below.\n",
+        "\n",
+        "<img src=\"img/02/shortest_path_example.png\" alt=\"Example of shortest path\" style=\"height: 150px;\"/>\n",
+        "\n",
+        "Various real-world problems can be solved by solving the shortest path problem. For example, suppose we have a graph representing a network of roads, with each edge of the graph weighted by the time it takes to pass through the road. Then we can find a travel route with the shortest travel time by finding a shortest path between two vertices on the graph.\n",
+        "\n",
+        "In addition to the shortest path problem, there are various other graph problems such as the network flow problem, the minimum cut problem, and the spanning tree problem, as well as algorithms for efficiently solving these problems. By abstracting and representing an object as a graph, it is possible to benefit from various mathematical theories and algorithms that deal with graphs.\n",
+        "\n",
+        "## Summary\n",
+        "\n",
+        "In this chapter, we have explained the basics of graph theory, which will be necessary for the rest of this chapter. Various real-world objects can be represented as graphs, and by representing them as graphs, we can take advantage of powerful algorithms for processing graphs.\n",
+        "\n",
+        "While graphs are powerful tools, there are problems that are difficult to solve even when represented as graphs. In [next chapter](03_graph_and_combinatorial_explosion.ipynb), we introduce such problems."
+      ],
+      "metadata": {
+        "id": "JKwBgNXtcgzB"
+      }
+    }
+  ]
 }
