Colaboratory を使用して作成しました

--- a/ja/03_graph_and_combinatorial_explosion.ipynb
+++ b/ja/03_graph_and_combinatorial_explosion.ipynb
@@ -1,97 +1,102 @@
 {
- "cells": [
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# グラフと組合せ爆発\n",
-    "\n",
-    "グラフに関連する問題を解く際，しばしば指数的に増加する組合せの数に悩まされることになります．このような現象を**組合せ爆発**とよびます．\n",
-    "\n",
-    "\n",
-    "## グラフと計算困難な問題\n",
-    "\n",
-    "[前章](02_graph_theory.ipynb) では，現実の対象をグラフとして表現することで様々な課題を解決できると説明しました．最短経路問題や最小全域木問題などの問題に対しては効率的なアルゴリズムが存在するため，グラフとしてモデル化することで現実の問題も効率的に解くことができます．\n",
-    "\n",
-    "一方で，グラフに関する全ての問題が効率的に解けるというわけではありません．そのような問題の例として**最長経路問題**があります．最長経路問題\n",
-    "とは，グラフ中の2つの頂点が与えられたときに，その2つを結ぶ経路のうち，もっとも辺の重みの合計が大きなものを求める問題です．\n",
-    "\n",
-    "<img src=\"img/03/shortest_and_longest_path.png\" alt=\"最短経路，最長経路の例\" style=\"height: 150px;\"/>\n",
-    "\n",
-    "最長経路問題の設定は最短経路問題と似ていますが，問題の難しさは大きく異なります．最短経路を求めるために必要な計算時間は，グラフの頂点・辺の数に対してほぼ線形となります．つまり，グラフの頂点や辺の数が2倍，3倍になったとしても，最短経路を求めるために必要な計算時間は2倍，3倍におさまります．\n",
-    "\n",
-    "一方，最長経路問題に対してはそのような効率的な計算方法は現在のところ見つかっていません．現在知られている最も効率的な解法であっても，グラフの大きさに対して**指数的**に計算時間が増大することがしられています．つまり，$n$本の辺をもったグラフの最長経路を求めるためにかかる計算時間と，$2n$本の辺をもったグラフの最長経路を求めるのにかかる時間とを比較すると，後者のほうが$k^n$倍もの時間がかかるということを意味しています．ここで $k$ は適当な正の整数です．\n",
-    "\n",
-    "仮に$k=2$だったとすると， 辺が1つ増えると計算時間が2倍となり，2本，3本と増えると4倍，8倍…と計算に時間がかかるようになることを意味しています．\n",
-    "\n",
-    "このような指数的な計算量の増加はすさまじく，たとえば30本辺が追加されると計算時間は10億倍に膨れ上がることになります．もとの問題の最長経路が1秒で求められたのだとすると，辺を追加した問題を解くためには*30年以上* かかる計算になります．\n",
-    "\n",
-    "最長経路問題は**NP困難**とよばれる問題のクラスに属することが知られています．NP困難な問題を解くためのアルゴリズムは，入力の大きさ（最長経路問題でいえばグラフの頂点，辺の数）に対して指数的に時間がかかる方法しか発見されていません．最長経路問題のほかにも，巡回セールスマン問題やシュタイナー木問題，最大カット問題など，グラフに関連するNP困難問題は多数知られています．\n",
-    "\n",
-    "\n",
-    "\n",
-    "## 組合せ爆発\n",
-    "\n",
-    "最長経路問題を解くことはなぜ難しいのでしょうか．端的に言えば，それは解を見つけるために調べなければならない答えの候補の数が非常に多いからです．たとえば以下のグラフにおいて頂点1から頂点9までの経路が何通りあるかを考えてみましょう．なお，ある経路中では同じ頂点を二度通過することはないものとします．\n",
-    "\n",
-    "<img src=\"img/03/grid_graph.png\" alt=\"グリッドグラフ\" style=\"height: 150px;\"/>\n",
-    "\n",
-    "このグラフには以下の12通りの経路が存在します．\n",
-    "\n",
-    "<img src=\"img/03/grid_graph_paths.png\" alt=\"グリッドグラフの経路\" style=\"width: 400px;\"/>\n",
-    "\n",
-    "\n",
-    "\n",
-    "次に，少しだけ大きくした以下のグラフについて，同様に対角の頂点1から頂点16までの経路が何通りあるかを調べてみましょう．\n",
-    "\n",
-    "<img src=\"img/03/large_grid_graph.png\" alt=\"大きいグラフ\" style=\"height: 200px;\"/>\n",
-    "\n",
-    "\n",
-    "\n",
-    "このグラフ中で経路は184通り存在します．このようにグラフの大きさが大きくなるにつれて，経路の数が急激に増加することが分かります．最長経路を求めるためには，経路を一つずつ取り出してその長さを比較する必要があります．そのため，経路の総数が指数的に増加すると計算時間も指数的に増加してしまうのです．\n",
-    "\n",
-    "\n",
-    "\n",
-    "最長経路問題の例では，経路の総数が問題サイズが大きくなるにつれて指数的に増加するために問題を解くのが困難になっていました．経路は辺の組合せによって構成されるため，この現象は経路となりうる辺の組合せの総数が指数的に増加したとみなすこともできます．このように，入力サイズが大きくなるにつれて組合せの総数が指数的に増加する現象を**組合せ爆発**とよびます．\n",
-    "\n",
-    "\n",
-    "グラフを扱う課題の困難さは組合せ爆発に起因します．一方で最短経路問題など，組合せ爆発の影響を受けない問題もあります．全ての可能な経路を考慮しないと解が求まらないのは最短路問題のときも同様です．しかし，最短経路問題を解く際には明示的に全ての可能な組合せを調べなくてもよいため，効率的に解を求めることができます．\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "## この章のまとめ\n",
-    "\n",
-    "組合せ爆発はやっかいな課題です．解きたい問題が組合せ爆発を起こす場合，現実的な時間で答えを求めることが難しい可能性が高いといえます．\n",
-    "そのような問題に直面した場合，これまでは近似的な方法，つまりもっともよい答えが見つかる保証はないけど，現実的な時間で答えを求めることが\n",
-    "できる方法が広く用いられていました．\n",
-    "\n",
-    "Graphillionはそのような組合せ爆発を起こすグラフの問題に対して，既存法とは全く別のアプローチで挑む方法を提供します．近似的な解法は全ての組合せを見ないことによって計算を高速に実行していたのに対し，Graphillionは組合せを*圧縮して表現*することによって効率的な計算を実現します．\n",
-    "\n",
-    "[次章](04_graphillion_first_step.ipynb)で早速Graphillionの機能を試してみましょう．"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit",
-   "language": "python",
-   "name": "python37664bit1a5444a133b9480d833ba634f3cf5666"
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyMmUmOHE3GgXM9MbS9wteso",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/yurahuna/graphillion_tutorial/blob/master/ja/03_graph_and_combinatorial_explosion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Graphs and Combinatorial Explosions\n",
+        "\n",
+        "When solving problems involving graphs, one is often confronted with an exponentially growing number of combinations. This phenomenon is called **combinatorial explosion**.\n",
+        "\n",
+        "\n",
+        "## Graphs and Computationally Difficult Problems\n",
+        "\n",
+        "In [previous chapter](02_graph_theory.ipynb), we explained that various problems can be solved by representing real-world objects as graphs. Since efficient algorithms exist for problems such as the shortest path problem and the minimum spanning tree problem, real-world problems can be efficiently solved by modeling them as graphs.\n",
+        "\n",
+        "On the other hand, not all graph problems can be solved efficiently. An example of such a problem is the **longest path problem**. The longest path problem\n",
+        "is the problem of finding a path with the maximum total edge weight given two vertices in a graph.\n",
+        "\n",
+        "<img src=\"img/03/shortest_and_longest_path.png\" alt=\"Examples of shortest and longest paths\" style=\"height: 150px;\"/>\n",
+        "\n",
+        "The setting of the longest path problem is similar to that of the shortest path problem, but the difficulty of the problem is very different. The computation time required to find a shortest path is approximately linear in the number of vertices and edges in the graph. In other words, even if the number of vertices or edges in the graph doubles or triples, the computation time required to find the shortest path is kept to a factor of 2 or 3.\n",
+        "\n",
+        "On the other hand, no such efficient method has been found for the longest path problem. Even the most efficient algorithm currently known increases the computation time **exponentially** with the size of the graph. This means that the computation time to find the longest path of a graph with $n$ edges is $k^n$ times longer than the time to find the longest path of a graph with $2n$ edges. Here $k$ is an arbitrary positive integer.\n",
+        "\n",
+        "If $k=2$, it means that one more edge doubles the computation time, two more edges quadruple the computation time, three more edges eight times the computation time, and so on.\n",
+        "\n",
+        "This exponential increase in computational complexity is so great that, for example, the addition of 30 edges increases the computation time by a factor of 1 billion. If the original longest path problem was solved in a second, it would take over *30 years* to solve the problem with the additional edges.\n",
+        "\n",
+        "It is known that the longest path problem belongs to a class of problems called **NP-hard**, and the only algorithms that have been found to solve NP-hard problems are those that take exponentially long relative to the size of the input. (In the longest path problem, the size of the input is the number of graph vertices and edges.) In addition to the longest path problem, many other graph-related NP-hard problems are known, such as the traveling salesman problem, Steiner tree problem, and maximum cut problem.\n",
+        "\n",
+        "\n",
+        "\n",
+        "## Combinatorial explosion\n",
+        "\n",
+        "Why is the longest path problem so hard to solve? Rougly speaking, it is because the number of possible answers that must be investigated to find a solution is very large. For example, consider the number of possible paths from vertex 1 to vertex 9 in the graph below. Note that a path must not pass through the same vertex twice.\n",
+        "\n",
+        "<img src=\"img/03/grid_graph.png\" alt=\"grid graph\" style=\"height: 150px;\"/>\n",
+        "\n",
+        "This graph has the following 12 paths.\n",
+        "\n",
+        "<img src=\"img/03/grid_graph_paths.png\" alt=\"grid graph paths\" style=\"width: 400px;\"/>\n",
+        "\n",
+        "\n",
+        "\n",
+        "Next, let's examine how many paths there are from vertex 1 to vertex 16 for the following slightly larger graph.\n",
+        "\n",
+        "<img src=\"img/03/large_grid_graph.png\" alt=\"large graph\" style=\"height: 200px;\"/>\n",
+        "\n",
+        "\n",
+        "\n",
+        "There are 184 paths in this graph. As you can see, the number of paths increases rapidly as the graph size increases. In order to find the longest path, we need to take out the paths one by one and compare their lengths. Therefore, as the total number of paths increases exponentially, the computation time also increases exponentially.\n",
+        "\n",
+        "\n",
+        "\n",
+        "In the longest path example, the total number of paths increases exponentially as the problem size increases, making the problem difficult to solve. Since paths are composed of combinations of edges, this phenomenon can be viewed as an exponential increase in the total number of possible paths. This exponential increase in the total number of combinations as the input size increases is called a **combinatorial explosion**.\n",
+        "\n",
+        "\n",
+        "Combinatorial explosion is responsible for the difficulty of graph problems. On the other hand, there are problems that are not affected by combinatorial explosion, such as shortest path problems. The same is true for shortest path problems, where the solution cannot be obtained without considering all possible paths. However, solving the shortest path problem does not require explicitly examining all possible combinations, and thus the solution can be obtained efficiently.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "## Summary of this chapter\n",
+        "\n",
+        "Combinatorial explosion is a difficult problem. If the problem you want to solve is combinatorially exploding, it is likely to be difficult to find an answer in a realistic amount of time.\n",
+        "When faced with such a problem, approximate methods have been widely used, i.e., methods that do not guarantee the best answer, but allow the solution to be found in a realistic amount of time.\n",
+        "\n",
+        "Graphillion offers a completely different approach to such combinatorial graph problems. Whereas approximate methods perform computations faster by not looking at all the combinations, Graphillion achieves efficient computation by *compressing* and *representing* the combinations.\n",
+        "\n",
+        "Let's try out Graphillion's features in [next chapter](04_graphillion_first_step.ipynb)."
+      ],
+      "metadata": {
+        "id": "hvR5Mwrvi0QP"
+      }
+    }
+  ]
 }
