Colaboratory を使用して作成しました

--- a/ja/04_graphillion_first_step.ipynb
+++ b/ja/04_graphillion_first_step.ipynb
@@ -20,270 +20,246 @@
       "version": "3.7.6"
     },
     "colab": {
-      "name": "04_graphillion_first_step.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XGeWbSmLScfC",
+        "id": "view-in-github",
         "colab_type": "text"
       },
       "source": [
-        "# Graphillionに触れてみよう\n",
-        "\n",
-        "いよいよGraphillionの解説に入ります．まずははじめに数え上げお姉さん問題を紹介し，それをGraphillionを使ってどのように解くかを具体的なコードを交えて解説します．Graphillionの機能の詳細および内部でどのような処理が走っているのかについては次章以降で解説します．"
+        "<a href=\"https://colab.research.google.com/github/yurahuna/graphillion_tutorial/blob/master/ja/04_graphillion_first_step.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "j7AUj0T8ScfE",
-        "colab_type": "text"
+        "id": "XGeWbSmLScfC"
       },
       "source": [
-        "## 数え上げお姉さん問題\n",
+        "# Let's touch Graphillion\n",
         "\n",
-        "まずは以下の動画を御覧ください．"
+        "Let's start with an introduction to Graphillion. The details of Graphillion's functionality and how it works internally will be explained in the next chapters."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j7AUj0T8ScfE"
+      },
+      "source": [
+        "## Counting sister problem（数え上げお姉さん問題）\n",
+        "\n",
+        "First, please watch the following video."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "06pDdF0DScfF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "06pDdF0DScfF"
       },
       "source": [
         "from IPython.display import YouTubeVideo\n",
         "\n",
         "YouTubeVideo(\"Q4gTV4r0zRs\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Mi4HthNkScfJ",
-        "colab_type": "text"
+        "id": "Mi4HthNkScfJ"
       },
       "source": [
-        "この動画で取り上げている問題を**数え上げお姉さん問題**とよぶことにします．動画ではチェスボードのような形をしたグラフの角の頂点間の経路の総数を調べ上げていました．そのような経路の総数はグラフが大きくなるにつれて指数的に増加するため，全ての経路を一つずつ数え上げると天文学的な時間がかかてしまいます．この問題をGraphilionを用いて解く方法を説明します．"
+        "Let us call the problem discussed in this video **Counting Sisters Problem**. The video shows a graph shaped like a chessboard in which the total number of paths between the vertices of the corners of the graph is being counted up. The total number of such paths grows exponentially as the graph grows, so counting all the paths one by one would take an astronomical amount of time. This section describes how to solve this problem using Graphilion."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Hbte7hhZScfL",
-        "colab_type": "text"
+        "id": "Hbte7hhZScfL"
       },
       "source": [
-        "## Graphillion はじめの一歩\n",
+        "## Graphillion First Steps\n",
         "\n",
-        "公開されているGraphillionライブラリには数え上げお姉さん問題を解く方法実演するためのモジュールが含まれています．今回はそのモジュールを用いて数え上げお姉さん問題を解いていきます．\n",
+        "The publicly available Graphillion library includes a module that demonstrates how to solve the Counting Sisters problem. In this tutorial, we will use this module to solve the Counting Sisters problem.\n",
         "\n",
+        "If you are using Colab, execute the following cell to download Graphillion and the tutorial module [tutorial_util.py](https://github.com/nsnmsak/graphillion_tutorial/blob/master/ en/tutorial_util.py).\n",
         "\n",
-        "Colabを利用している方は以下のセルを実行してGraphillionとチュートリアル用のモジュール[tutorial_util.py](https://github.com/nsnmsak/graphillion_tutorial/blob/master/ja/tutorial_util.py)をインストールしましょう．\n",
-        "\n",
-        "別のノートブックを開くたびにColab環境にgraphillionをインストールする必要があります．"
+        "You will need to install graphillion in the Colab environment each time you open another notebook."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SEu34gkXScfM",
-        "colab_type": "code",
-        "colab": {}
+        "id": "SEu34gkXScfM"
       },
       "source": [
         "!pip install graphillion\n",
         "!git clone https://github.com/nsnmsak/graphillion_tutorial\n",
         "!cp graphillion_tutorial/ja/tutorial_util.py ."
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iElGvVxBScfP",
-        "colab_type": "text"
+        "id": "iElGvVxBScfP"
       },
       "source": [
-        "次にgraphillionモジュールから`GraphSet`と`tutorial`をインポートします．"
+        "Next, import the `GraphSet` and `tutorial` from the graphillion module."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K74JE5TYScfQ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "K74JE5TYScfQ"
       },
       "source": [
         "from graphillion import GraphSet, tutorial\n",
         "from tutorial_util import draw_subgraph, draw_universe"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jJRDRXpPScfT",
-        "colab_type": "text"
+        "id": "jJRDRXpPScfT"
       },
       "source": [
-        "`GraphSet`はGraphillionの中心的な役割を果たすクラスであり，グラフの集合を扱う各種メソッドが実装されています．`tutorial`モジュールにはGraphillionのWebページに掲載されている[チュートリアル](https://github.com/takemaru/graphillion/wiki#%E3%83%81%E3%83%A5%E3%83%BC%E3%83%88%E3%83%AA%E3%82%A2%E3%83%AB) のための補助的な関数が実装されています．`draw_subgraph`はこのチュートリアルのために用意した，グラフ描画のための補助関数です．\n",
+        "`GraphSet` is a class that plays a central role in Graphillion and implements various methods for handling a set of graphs. The `tutorial` module contains [tutorial](https://github.com/takemaru/graphillion/wiki#%E3%83%81%E3%83%A5%E3%83%BC%E3%83%88%E3%83%AA%E3%82%A2%E3%83%AB). `draw_subgraph` is an auxiliary function for drawing graphs that has been prepared for this tutorial.\n",
         "\n",
-        "では，Graphillionで数え上げお姉さん問題を解いていきましょう．まず問題のグラフを準備します．"
+        "Now, let's solve the Counting Sisters problem in Graphillion. First, prepare the graph of the problem."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hdP1RbcIScfU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "hdP1RbcIScfU"
       },
       "source": [
         "grid = tutorial.grid(7, 7)\n",
         "grid"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8t_JwTTBScfX",
-        "colab_type": "text"
+        "id": "8t_JwTTBScfX"
       },
       "source": [
-        "`tutorial.grid(n, m)`はお姉さん問題で扱っている，格子状のグラフを生成するためのメソッドです．なお，以下ではこのグラフをグリッドグラフとよびます．生成されたグリッドグラフは整数のペアのリストとして表現されています．各整数は頂点の番号を表し，各ペアは頂点間の辺を表しています．\n",
-        "\n"
+        "`tutorial.grid(n, m)` is a method to generate a grid graph, which is used in the the problem. In the following, this graph is referred to as a grid graph. The generated grid graph is represented as a list of pairs of integers. Each integer represents a vertex number, and each pair represents an edge between vertices."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "O8T06LmUScfb",
-        "colab_type": "text"
+        "id": "O8T06LmUScfb"
       },
       "source": [
-        "次にこのグリッドグラフ上の経路の集合を表すGraphSetをつくっていきます．まず，`GraphSet`クラスに経路を考える対象となるグリッドグラフ`grid`を登録します．"
+        "Next, we will create a GraphSet that represents a set of routes on this grid graph. First, register a grid graph `grid` in the `GraphSet` class."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nHqp0MVMScfb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "nHqp0MVMScfb"
       },
       "source": [
         "GraphSet.set_universe(grid)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qRf5DcJeScfe",
-        "colab_type": "text"
+        "id": "qRf5DcJeScfe"
       },
       "source": [
-        "Graphillionが扱うグラフの集合は，あるグラフ（以下，*universe*とよぶ）の部分グラフの集合として定義されます．`GraphSet.set_universe()`は，universeを設定するメソッドです．\n",
+        "The set of graphs handled by Graphillion is defined as the set of subgraphs of a graph (hereafter called *universe*). GraphSet.set_universe()` sets the universe.\n",
         "\n",
-        "`draw_universe()`メソッドを用いることでuniverseを描画することができます．\n",
-        "\n"
+        "The `draw_universe()` method can be used to draw a universe."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xKvDzFGDScfY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xKvDzFGDScfY"
       },
       "source": [
         "draw_universe()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5A_tHJgQeCMv",
-        "colab_type": "text"
+        "id": "5A_tHJgQeCMv"
       },
       "source": [
-        "\n",
-        "ではいよいよ数え上げお姉さん問題を解いてみましょう．Graphillionでは以下のメソッドで答えを求めることができます．"
+        "Now it's time to solve the counting sister problem, which can be solved in Graphillion using the following method."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QeZvQVuVScff",
-        "colab_type": "code",
-        "colab": {}
+        "id": "QeZvQVuVScff"
       },
       "source": [
         "paths = GraphSet.paths(1, 64)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wJReTEHCScfi",
-        "colab_type": "text"
+        "id": "wJReTEHCScfi"
       },
       "source": [
-        "`GraphSet.paths(s, t)`は，頂点`s` から`t`までの，ループを含まない全ての経路の集合を表すGraphSetオブジェクトを求めるメソッドです．大きいグラフを扱う場合は実行に時間がかかることもありますが，このチュートリアルで扱う程度の規模のグラフなら一瞬で計算結果が得られるはずです．`paths`は全ての経路の集合を表すGraphSetオブジェクトです．\n",
+        "`GraphSet.paths(s, t)` finds a GraphSet object that represents the set of all paths from vertex `s` to `t`, not including loops. It may take some time to run for large graphs, but for a graph of the size of this tutorial, the result should be obtained in a fraction of a second. `paths` is a GraphSet object that represents a set of all paths.\n",
         "\n",
-        "次に`paths`に含まれる経路の数を求めてみましょう．"
+        "Next, let's find the number of paths in `paths`."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L6AMdXfWScfj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "L6AMdXfWScfj"
       },
       "source": [
         "len(paths)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WiYE71ACScfl",
-        "colab_type": "text"
+        "id": "WiYE71ACScfl"
       },
       "source": [
-        "Graphillionを用いることで，数え上げお姉さん動画ではスーパーコンピュータで解いていた問題を一瞬で解くことができました．\n",
+        "Using Graphillion, we were able to solve the problem in a fraction of the time it took to solve the Counting Sisters movie on a supercomputer.\n",
         "\n",
-        "Graphillionはお姉さん問題を解く以上の豊富な機能を備えています．以下では，`paths`に含まれる経路の中から辺の数が最小のもの，最大のもの，\n",
-        "長さ（辺の数）が最短のもの，最長のものをそれぞれ一つ取り出しています．"
+        "Graphillion has many more features than just solving the counting sister problem. In the following, the paths included in `paths` are selected from the ones with the smallest number of edges, the ones with the largest number of edges, and the ones with the longest length (number of edges) of the paths.\n",
+        "the shortest length (number of edges), and the longest length (number of edges), respectively, from the paths in `paths`."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y9alIv_KScfm",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Y9alIv_KScfm"
       },
       "source": [
         "shortest_path = next(paths.min_iter())\n",
@@ -292,22 +268,22 @@
         "draw_subgraph(shortest_path)\n",
         "draw_subgraph(longest_path)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xOlD7WoHScfp",
-        "colab_type": "text"
+        "id": "xOlD7WoHScfp"
       },
       "source": [
-        "`draw_subgraph(subgraph)` メソッドを用いると`universe`と`subgraph`とを重ねて描画することができます．\n",
+        "The `draw_subgraph(subgraph)` method can be used to draw a `universe` and a `subgraph` on top of each other.\n",
         "\n",
-        "## この章のまとめ\n",
+        "## Summary of this chapter\n",
         "\n",
-        "この章では数え上げお姉さん問題と，それをGraphillionを使って解く方法を紹介しました．Graphillionを用いると膨大な数の経路をあっという間に数え上げることができます．Graphillionがなぜ高速に問題を解くことができたかについて[次章](05_graphillion_and_zdd.ipynb)で解説します．\n",
-        "\n"
+        "In this chapter, we introduced the counting-up-sister problem and how to solve it using Graphillion.\n",
+        "Graphillion allows you to count a huge number of paths in a fraction of the time.\n",
+        "We will explain in [next chapter](05_graphillion_and_zdd.ipynb) why Graphillion was able to solve the problem so quickly."
       ]
     }
   ]
